Fixed bar that overflows the cards statistics card

--- a/src/app/stats/stats.component.css
+++ b/src/app/stats/stats.component.css
@@ -1,7 +1,7 @@
 .container-fluid{
     min-height: 80vh;
     margin-top: 200px;
-    background-color: var(--light-gray);
+    background-color: #F0F1F6;
 }
 
 .container{
@@ -15,6 +15,7 @@
     justify-content: center;
     margin-top: 50px;
     margin-bottom: 100px;
+    position: relative;
 }
 
 h2{
